--- a/nfina_benchmark_app/templates/home.html
+++ b/nfina_benchmark_app/templates/home.html
@@ -54,20 +54,25 @@
                     <div class="tab-pane fade show active" id="docker" role="tabpanel" aria-labelledby="docker-tab">
                         <div class="row">
                             <div class="col">
-                                <div class="row" style="margin-top: 10px;">
+                                <div class="row">
                                     <div class="col-auto">
-                                        <h1>Docker Monitor</h1>
+                                        <h1>Benchmarks</h1>
                                     </div>
                                 </div>
 
-                                <div class="row">
-                                    <iframe 
+                                {% comment %}<div class="row">
+                                    <iframe
                                         id="docker_dashboard"
                                         style="width: 95%; height: 90vh; border: none; display: block; margin: 0 auto;"
                                         src="http://localhost:3000/d/docker-monitor/docker-monitor?orgId=1&from=now-1h&to=now&timezone=browser&refresh=10s&theme=light&kiosk">
                                     </iframe>
-                                </div>
+                                </div>{% endcomment %}
 
+                                <div class="d-flex flex-row justify-content-around p-2 rounded btn-primary">
+                                {% for item in items %}
+                                    <div class="p-2 bg-light rounded">{{ item }}</div>
+                                {% endfor %}
+                                </div>
                             </div>
                         </div>
                     </div>
